# ai-voice

./: .env.example  .gitignore  Makefile  docker-compose.yml  readme.md
infrastructure/grafana/dashboards/: appointments.json  campaigns.json  system-health.json  voice-pipeline.json
infrastructure/mongo/: init.js  seed.js
infrastructure/nginx/: nginx.conf
infrastructure/prometheus/: alerts.yml  prometheus.yml
infrastructure/redis/: redis.conf
services/api-gateway/: Dockerfile  package.json  tsconfig.json
services/api-gateway/src/: config.ts  health.ts  main.ts
services/appointment-scheduler/: Dockerfile  package.json
services/appointment-scheduler/src/: config.ts  health.ts  main.ts
services/audio-gateway/: Dockerfile  requirements.txt
services/campaign-engine/: Dockerfile  package.json  tsconfig.json
services/llm-agent/: Dockerfile  requirements.txt
services/llm-agent/app/: main.py  (+3 more)
services/patient-memory/: Dockerfile  package.json  tsconfig.json
services/session-manager/: Dockerfile  requirements.txt
services/stt-service/: Dockerfile  requirements.txt
services/tool-orchestrator/: Dockerfile  requirements.txt
services/tts-service/: Dockerfile  requirements.txt
shared/proto/: health.proto  llm_agent.proto  stt.proto  tool_orchestrator.proto  tts.proto
shared/python/: pyproject.toml
shared/python/shared/: __init__.py  audio_utils.py  circuit_breaker.py  config.py  events.py  exceptions.py  grpc_utils.py  logging.py  metrics.py  mongo_client.py  redis_client.py  tracing.py
shared/typescript/: package.json
tools/: generate-proto.sh
(+244 files in other folders)
